[macOS] "Update AutoFill Information" prompt incorrectly shows up after performing AutoFill and then closing a tab https://bugs.webkit.org/show_bug.cgi?id=288315 rdar://145085437
Reviewed by Abrar Rahman Protyasha.

To improve web compatibility, Safari's AutoFill JavaScript creates and dispatches `TextEvent` on
text fields in order to simulate text insertion. This internally triggers typing commands, which
marks the text field as having been last modified via user edit. This, in turn, causes Safari to
(incorrectly) believe that the user had manually modified the AutoFilled text field after invoking
AutoFill, which then shows a prompt.

To fix this, we add some plumbing from `TextEvent` → `TypingCommand` → `Editor::appliedEditing` to
avoid marking the text field as having been modified through user editing, only in the case where
these text editing commands were triggered by a `TextEvent` that was created and initialized from
JS bindings.

* LayoutTests/fast/forms/textfield-lastchange-was-useredit-expected.txt:
* LayoutTests/fast/forms/textfield-lastchange-was-useredit.html:

Augment an existing layout test to cover this scenario.

* Source/WebCore/dom/TextEvent.cpp:
(WebCore::TextEvent::TextEvent):
* Source/WebCore/dom/TextEvent.h:

Add a flag to mark a `TextEvent`, as being created from JS bindings (as opposed to created from the
engine as a result of handling key events, etc.).

* Source/WebCore/editing/Editor.cpp:
(WebCore::notifyTextFromControls):
(WebCore::Editor::appliedEditing):

If the edit command is a typing command that was triggered by an event created from bindings, pass
`wasUserEdit := false`.

(WebCore::Editor::insertTextWithoutSendingTextEvent):
(WebCore::Editor::setComposition):
* Source/WebCore/editing/EditorCommand.cpp:
(WebCore::executeInsertText):
* Source/WebCore/editing/TypingCommand.cpp:
(WebCore::TypingCommand::insertText):

Add plumbing to send `TextEvent*` through `TypingCommand::insertText`, so that we can mark the
`TypingCommand` as bein

--- a/LayoutTests/fast/forms/textfield-lastchange-was-useredit.html
+++ b/LayoutTests/fast/forms/textfield-lastchange-was-useredit.html
@@ -14,7 +14,16 @@ if (!window.testRunner || !window.internals)
     testFailed('This test requires access to window.internals');
 
 var textField;
-function runTest(element) {
+
+function dispatchTextEventsInTextField(targetElement, text) {
+    [...text].map(letter => {
+        const event = document.createEvent("TextEvent");
+        event.initTextEvent("textInput", true, true, null, letter);
+        targetElement.dispatchEvent(event);
+    });
+}
+
+[...document.querySelectorAll('input, textarea')].map(element => {
     debug((textField ? '\n' : '') + element.localName);
 
     textField = element;
@@ -46,11 +55,11 @@ function runTest(element) {
         shouldBeFalse('textField.innerText = " WebKit "; internals.wasLastChangeUserEdit(textField)');
     }
 
-    textField.parentNode.removeChild(textField);
-}
+    textField.focus();
+    shouldBeFalse('dispatchTextEventsInTextField(textField, "foo"); internals.wasLastChangeUserEdit(textField)');
 
-runTest(document.getElementsByTagName('input')[0]);
-runTest(document.getElementsByTagName('textarea')[0]);
+    textField.parentNode.removeChild(textField);
+});
 
 </script>
 <script src="../../resources/js-test-post.js"></script>
