[GStreamer] webrtc/processIceTransportStateChange-gc.html times out https://bugs.webkit.org/show_bug.cgi?id=266713
Reviewed by Xabier Rodriguez-Calvar.

Complete the offer/answer exchange between the two peer-connections, otherwise one of them will have
its ICE transport fail.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/webrtc/processIceTransportStateChange-gc.html:

Canonical link: https://commits.webkit.org/290947@main

--- a/LayoutTests/webrtc/processIceTransportStateChange-gc.html
+++ b/LayoutTests/webrtc/processIceTransportStateChange-gc.html
@@ -39,6 +39,7 @@ async function doTest()
 
     const answer = await remote_connection.createAnswer();
     await remote_connection.setLocalDescription(answer);
+    await local_connection.setRemoteDescription(answer);
 
     local_connection.sctp.transport.iceTransport.onstatechange = () => {
         iframe.remove();
