Skip internals.setGridMaxTracksLimit from internals-object-property-access-on-window-without-frame-crash.html https://bugs.webkit.org/show_bug.cgi?id=288378
Reviewed by Anne van Kesteren.

This test was added in https://commits.webkit.org/289309@main. It calls
internals.setGridMaxTracksLimit which is causing subsequent grid tests
in the same runner to fail on WK1.

* LayoutTests/fast/harness/internals-object-property-access-on-window-without-frame-crash.html: Skip setGridMaxTracksLimit, tweak the comment and sort the list.
* LayoutTests/platform/mac-wk1/TestExpectations: Don't skip the test on mac-wk1.

Canonical link: https://commits.webkit.org/291242@main

--- a/LayoutTests/fast/harness/internals-object-property-access-on-window-without-frame-crash.html
+++ b/LayoutTests/fast/harness/internals-object-property-access-on-window-without-frame-crash.html
@@ -5,24 +5,25 @@ if (testRunner)
     testRunner.dumpAsText();
 
 const skippedInternalFunctions = [
-  // Calling the following internals function can cause crashes or assertions, but
-  // they don't actually involve a DOM tree and shouldn't be covered by this test.
-  "reportBacktrace",
-  "terminateWebContentProcess",
+  // Calling the following internals function can cause unexpected behavior
+  // (crashes, assertions, subsequent tests failing...) but they don't actually
+  // require a frame and so shouldn't be covered by this test.
   "beginAudioSessionInterruption",
   "beginMediaSessionInterruption",
   "createFile",
   "hasSandboxMachLookupAccessToGlobalName",
   "hasSandboxMachLookupAccessToXPCServiceName",
   "hasSandboxUnixSyscallAccess",
+  "hasServiceWorkerRegistration",
+  "reportBacktrace",
+  "setGridMaxTracksLimit",
   "setHardwareVP9DecoderDisabledForTesting",
   "setSystemHasACForTesting",
   "setSystemHasBatteryForTesting",
   "setVP9DecoderDisabledForTesting",
   "setVP9ScreenSizeAndScaleForTesting",
-  // These two crashes on mac-wk1, but don't require a frame.
-  "hasServiceWorkerRegistration",
   "storeRegistrationsOnDisk",
+  "terminateWebContentProcess",
 ];
 
 // The following exceptions can be thrown because the internals properties are
