--- a/LayoutTests/platform/glib/damage/accelerated-canvas-2d-fillRect.html
+++ b/LayoutTests/platform/glib/damage/accelerated-canvas-2d-fillRect.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./common.css">
+    <style>
+      body {
+          overflow: hidden;
+      }
+    </style>
   </head>
   <body>
     <canvas width="2000" height="2000" />
