--- a/LayoutTests/platform/glib/damage/scrolling-container-001.html
+++ b/LayoutTests/platform/glib/damage/scrolling-container-001.html
@@ -9,7 +9,7 @@
           left: 17px;
           width: 100px;
           height: 100px;
-          overflow: scroll;
+          overflow: hidden scroll;
           background: green;
       }
     </style>
