--- a/LayoutTests/platform/glib/damage/scrolling-container-004.html
+++ b/LayoutTests/platform/glib/damage/scrolling-container-004.html
@@ -6,7 +6,7 @@
       .container {
           width: 100px;
           height: 100px;
-          overflow: scroll;
+          overflow: hidden scroll;
           background: green;
       }
       .containee {
