Enable Trusted Types in stable https://bugs.webkit.org/show_bug.cgi?id=275349
Reviewed by Tim Nguyen.

Changes TrustedTypes UnifiedWebPreferences.yaml flag from testable to stable.
TrustedTypes remains disabled by default in WebKitLegacy.

The JSC useTrustedTypes option is also enabled by default.

Also updates WPT test files to no longer manually set useTrustedTypes JSC option to true.

* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/reporting/report-clips-sample.https.html:
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/securitypolicyviolation/source-file.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/WorkerGlobalScope-eval.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/block-eval-function-constructor.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/csp-block-eval.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-csp-no-tt.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-csp-tt-default-policy-mutate.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-csp-tt-default-policy.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-csp-tt-no-default-policy.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-function-constructor-untrusted-arguments-and-applying-default-policy.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-function-constructor-untrusted-arguments-and-default-policy-throwing.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-function-constructor.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-no-csp-no-tt-default-policy.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-no-csp-no-tt.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-with-permissive-csp.html:
* LayoutTests/imported/w3c/web-platform-tests/trusted-types/trusted-types-eval-reporting-no-unsafe-ev

--- a/LayoutTests/imported/w3c/web-platform-tests/trusted-types/block-eval-function-constructor.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/trusted-types/block-eval-function-constructor.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- webkit-test-runner [ jscOptions=--useTrustedTypes=true ] -->
+<!DOCTYPE html>
 <link rel="help" href="https://w3c.github.io/webappsec-csp/#can-compile-strings">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
