--- a/LayoutTests/imported/w3c/web-platform-tests/trusted-types/trusted-types-reporting.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/trusted-types/trusted-types-reporting.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- webkit-test-runner [ jscOptions=--useTrustedTypes=true ] -->
+<!DOCTYPE html>
 <head>
   <meta name="timeout" content="long">
   <script src="/resources/testharness.js"></script>
