--- a/LayoutTests/imported/w3c/web-platform-tests/trusted-types/WorkerGlobalScope-eval.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/trusted-types/WorkerGlobalScope-eval.html
@@ -1,4 +1,4 @@
-<!doctype html><!-- webkit-test-runner [ jscOptions=--useTrustedTypes=true ] -->
+<!doctype html>
 <html>
 <head>
   <meta http-equiv="Content-Security-Policy" content="require-trusted-types-for 'script';">
