--- a/LayoutTests/imported/w3c/web-platform-tests/trusted-types/csp-block-eval.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/trusted-types/csp-block-eval.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- webkit-test-runner [ jscOptions=--useTrustedTypes=true ] -->
+<!DOCTYPE html>
 <html>
 <head>
   <script nonce="abc" src="/resources/testharness.js"></script>
