--- a/LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-function-constructor.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/trusted-types/eval-function-constructor.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- webkit-test-runner [ jscOptions=--useTrustedTypes=true ] -->
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="help" href="https://w3c.github.io/webappsec-csp/#can-compile-strings">
