MutationEvent interface is exposed even when mutation events are disabled https://bugs.webkit.org/show_bug.cgi?id=288894
Reviewed by Chris Dumez and Anne van Kesteren.

Runtime guard MutationEvent interface.

* LayoutTests/fast/dom/mutation-events-disablement-expected.txt:
* LayoutTests/fast/dom/mutation-events-disablement.html:
* Source/WebCore/bindings/js/WebCoreBuiltinNames.h:
* Source/WebCore/dom/MutationEvent.idl:

Canonical link: https://commits.webkit.org/291448@main

--- a/LayoutTests/fast/dom/mutation-events-disablement.html
+++ b/LayoutTests/fast/dom/mutation-events-disablement.html
@@ -23,6 +23,7 @@ const text = document.body.appendChild(document.createTextNode('hello'));
 mutationEvents = [];
 text.replaceData(0, 5, 'world');
 shouldBe('mutationEvents', '[]');
+shouldBeEqualToString('typeof MutationEvent', 'undefined');
 
 </script>
 </body>
