[GStreamer][MSE] Avoid adding redundant tracks to MediaPlayer https://bugs.webkit.org/show_bug.cgi?id=288974
Reviewed by Alicia Boya Garcia.

In MSE, WebKit already adds tracks to the HTMLMediaElement and the SourceBuffer in
SourceBuffer::sourceBufferPrivateDidReceiveInitializationSegment, so we need to
avoid adding each Track again in updateTracks.

* LayoutTests/media/media-source/media-source-vttsimple-expected.txt:
* LayoutTests/media/media-source/media-source-vttsimple.html: Explicitly test for the number of tracks.
* LayoutTests/media/media-source/media-source-webm-expected.txt:
* LayoutTests/media/media-source/media-source-webm.html: Ditto.
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::updateTracks): Don't add Tracks to MediaPlayer if in MSE.

Canonical link: https://commits.webkit.org/291559@main

--- a/LayoutTests/media/media-source/media-source-vttsimple.html
+++ b/LayoutTests/media/media-source/media-source-vttsimple.html
@@ -40,6 +40,9 @@
         }
 
         consoleWrite('<br/>Verify track properties.');
+        testExpected('video.videoTracks.length', 1);
+        testExpected('video.audioTracks.length', 0);
+        testExpected('video.textTracks.length', 1);
         run('track = video.textTracks[0]');
         testExpected('track.id', '4');
 
