Update test and expectations for iOS for http/tests/scroll-to-text-fragment/generation-deal-with-newlines-in-directive.html https://bugs.webkit.org/show_bug.cgi?id=288848 rdar://145868474
Unreviewed bug fix.

There is a bug in the spec where if we are looking for a range based on a directive that
has no prefix or suffix and the range ends in a period that is also the end of the document
then we fail to find the range. This cannot be fixed by adding a suffix or prefix to the
directive because there is nothing after the end to add context. This bug is also present in
Blink's implementation, and does seem to be a fallout from how the spec is written, so I do
believe it is an issue with the spec. But since it only affects situations in which the
document is very small, and you are attempting to select to the end of document, and the document
end's with a period, I am changing the test instead of investing more time in figuring out
the right way to fix the spec and/or our searching functionality.

The reason that iOS and macOS have different implementations is because of the age old decision
to use AppKit for our word boundary logic on mac and unicode on iOS, and this works for AppKit,
but the unicode implementation needs to add additional context to the directive to correctly find it.

* LayoutTests/http/tests/scroll-to-text-fragment/generation-deal-with-newlines-in-directive.html:
* LayoutTests/platform/ios/http/tests/scroll-to-text-fragment/generation-deal-with-newlines-in-directive-expected.txt: Added.

Canonical link: https://commits.webkit.org/291599@main

--- a/LayoutTests/http/tests/scroll-to-text-fragment/generation-deal-with-newlines-in-directive.html
+++ b/LayoutTests/http/tests/scroll-to-text-fragment/generation-deal-with-newlines-in-directive.html
@@ -18,5 +18,6 @@ Select some code that doesn't have a space before it.
 <span id="test">This is the text without a space
 <code>fakecode.h</code>
 and the end of the selecton.</span>
+Additional text after the selection.
 </html>
 
