[Debug] fullscreen/full-screen-enter-while-exiting-fully-mid-completion-handler.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=289186 rdar://146319214
Reviewed by Eric Carlson.

Follow the same pattern as full-screen-enter-while-exiting-mid-completion-handler.html of waiting for a presentation update.

Also remove unused changePromise variable from the other test.

* LayoutTests/fullscreen/full-screen-enter-while-exiting-fully-mid-completion-handler.html:
* LayoutTests/fullscreen/full-screen-enter-while-exiting-mid-completion-handler-expected.txt:
* LayoutTests/fullscreen/full-screen-enter-while-exiting-mid-completion-handler.html:

Canonical link: https://commits.webkit.org/291663@main

--- a/LayoutTests/fullscreen/full-screen-enter-while-exiting-fully-mid-completion-handler.html
+++ b/LayoutTests/fullscreen/full-screen-enter-while-exiting-fully-mid-completion-handler.html
@@ -27,6 +27,7 @@
 
         consoleWrite('Fully exit fullscreen with target1');
         run('document.webkitCancelFullScreen()');
+        await testRunner.updatePresentation();
 
         consoleWrite('Attempt to enter fullscreen with target2');
         internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
