[iOS] [Visual Bidi Selection] Selection flickers when selecting LTR text next to Indic numerals https://bugs.webkit.org/show_bug.cgi?id=289302 rdar://144607260
Reviewed by Aditya Keerthi.

Consider the following scenario, where two bidi LTR text runs are embedded in an RTL paragraph, with
only a space character in between; let's suppose the entire left word (second in logical order) is
selected below, with `S` and `E` denoting the selection start and end, respectively. The selection
highlight (as seen by the user) is also denoted below.

        "Hello"      "۷۴۸۵۵"
      S        E
    | ▦▦▦▦▦▦▦▦▦▦ | ▦▦▦▦▦▦▦▦▦▦ |
    | ---ltr---> | ---ltr---> |
    |<------------------------| rtl ¶

      ▦▦▦▦▦▦▦▦▦▦               selection highlight

Now, suppose the user takes the selection end handle (`E`) and extends it into the right word, such
that the selection handles flip (due to reversing the logical base/extent) — that is, the previous
selection end becomes the new start of the selection, and the previous start becomes the new end:

        "Hello"      "۷۴۸۵۵"
               E        S
    | ▦▦▦▦▦▦▦▦▦▦ | ▦▦▦▦▦▦▦▦▦▦ |
    | ---ltr---> | ---ltr---> |
    |<------------------------| rtl ¶

                ▦▦▦▦▦▦▦▦▦       selection highlight

Currently, our visual bidi selection heuristics naively join the two logically-contiguous, visually-
discontiguous selections together by combining them together to form a single, coalesced rect that
spans from the start position to the end position. In this particular scenario, this means that the
left word ("Hello" in this example) will appear visually unselected even though it's still selected
in the DOM, which in turn creates a confusing experience for the user (especially since it will be
selected both logically and visually once the user lets go anyways).

To fix this, we augment the heuristics in `makeBidiSelectionVisuallyContiguousIfNeeded`:

-   First, detect this above scenario by checking for a single-line selection, wherein 

--- a/LayoutTests/editing/selection/ios/bidi-visually-contiguous-selection-7.html
+++ b/LayoutTests/editing/selection/ios/bidi-visually-contiguous-selection-7.html
@@ -30,23 +30,7 @@ jsTestIsAsync = true;
 addEventListener("load", async () => {
     description("Verifies that the selection remains visually consistent when selecting the entire first line in the paragraph below. To manually run the test, select the text highlighted in red, from right to left");
 
-    lineBounds = (() => {
-        const range = document.createRange();
-        range.selectNodeContents(document.querySelector("p[dir='rtl']"));
-        const clientRects = range.getClientRects();
-        const firstRect = clientRects[0];
-        const secondRect = clientRects[1];
-        const x = Math.min(firstRect.left, secondRect.left);
-        const y = Math.min(firstRect.top, secondRect.top);
-        const maxX = Math.max(firstRect.left + firstRect.width, secondRect.left + secondRect.width);
-        const maxY = Math.max(firstRect.top + firstRect.height, secondRect.top + secondRect.height);
-        return {
-            top: Math.round(y),
-            left: Math.round(x),
-            width: Math.round(maxX - x),
-            height: Math.round(maxY - y)
-        };
-    })();
+    lineBounds = UIHelper.computeLineBounds(document.querySelector("p[dir='rtl']"), 0, 1);
 
     let overlay = document.querySelector("div.overlay");
     overlay.style.top = `${lineBounds.top}px`;
