Document leak occurs when dragging cursor over Hebrew characters https://bugs.webkit.org/show_bug.cgi?id=286509 rdar://143597148
Reviewed by Ryan Reno.

A document leak occurs when dragging over Hebrew characters in a layout test fast/text/international/hebrew-selection.html.
The leak isn't specific to Hebrew but also other Unicode represented characters.

The leak occurs due to the FrameSelection's member m_originalBase
keeping a RefPtr to a Node in m_originalBase's Position member. It is used to keep track of positions between characters at a boundary for certain kinds of text during character selection.
m_originalBase can be reset to null upon the next mouse selection such as on a mouse click.

A user can cause this leak if they highlight this text, not perform another mouse selection anywhere else on the page, then either navigate away from the page or navigate to another document by pressing on an
anchor link. The document where the text selection happened on would then be stuck in a reference cycle.

The document owns the FrameSelection, which is the reason why this leak occurs because Document -> FrameSelection -> VisiblePosition -> Position -> Node-> Document.
Fix this by resetting m_originalBase when the Document calls FrameSelection::willBeRemovedFromFrame. This is called when the document itself is being removed from the frame.

* LayoutTests/fast/text/international/hebrew-selection-does-not-leak-expected.txt: Added.
* LayoutTests/fast/text/international/hebrew-selection-does-not-leak.html: Added.
* LayoutTests/fast/text/international/hebrew-selection.html:
* Source/WebCore/editing/FrameSelection.cpp:
(WebCore::FrameSelection::willBeRemovedFromFrame):

Canonical link: https://commits.webkit.org/291804@main

--- a/LayoutTests/fast/text/international/hebrew-selection.html
+++ b/LayoutTests/fast/text/international/hebrew-selection.html
@@ -17,11 +17,14 @@ var width = document.getElementById("reference").offsetWidth;
 var target = document.getElementById("target");
 
 if (window.eventSender) {
+    if (window.frameElement)
+        window.frameElement.scrollIntoView(true);
     window.eventSender.mouseMoveTo(target.offsetLeft + 5, target.offsetTop + 5);
     window.eventSender.mouseDown();
     window.eventSender.mouseMoveTo(target.offsetLeft + 5 + width / 2, target.offsetTop + 5);
     window.eventSender.mouseUp();
 }
+onload = () => parent.postMessage("iframeLoaded");
 </script>
 </body>
 </html>
